--- a/src/components/blocks/hero/HomeVideoCTA.astro
+++ b/src/components/blocks/hero/HomeVideoCTA.astro
@@ -17,8 +17,10 @@ import Col from '../../ui/Col.astro'
 // - Props
 type Props = {
 	videoSource: string
+	headingClasses?: string
+	linksClasses?: string
 }
-const { videoSource } = Astro.props
+const { videoSource, headingClasses, linksClasses } = Astro.props
 ---
 
 <Section id="intro" classes="!overflow-visible !pt-[240px]">
@@ -33,19 +35,17 @@ const { videoSource } = Astro.props
 				<source src={videoSource} type="video/mp4" />
 			</video>
 
-			<div class="relative z-10 text-left">
-				<h1 class="w-initial text-left text-4xl leading-[60px] md:text-8xl md:leading-[120px]">
-					I’m Milo <br /> I build <br /> for the web.
+			<div class="relative z-10">
+				<h1 class:list={['max-w-3xl', { [`${headingClasses}`]: headingClasses }]}>
+					Hi, <br />I’m Milo <br />& I design.
 				</h1>
 
-				<div
-					class="flex flex-row flex-wrap gap-6 font-headingsPrimary text-base text-neutral-600 lg:flex-nowrap dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300"
-				>
-					<a href="mailto:milo@studio.com">milo@studio.com</a>
-					<a href="tel:+13235550198">+1 (323) 555-0198</a>
-					<span>Remote Friendly</span>
-					<a href="#">@milo.design</a>
-				</div>
+				<ul class:list={['horizontal-list row', { [`${linksClasses}`]: linksClasses }]}>
+					<li><a href="mailto:milo@studio.com">milo@studio.com</a></li>
+					<li><a href="tel:+13235550198">+1 (323) 555-0198</a></li>
+					<li>Remote Friendly</li>
+					<li><a href="#">@milo.design</a></li>
+				</ul>
 			</div>
 		</Col>
 	</Row>
