--- a/src/components/blocks/titleText/TitleText.astro
+++ b/src/components/blocks/titleText/TitleText.astro
@@ -19,16 +19,17 @@ type Props = {
 	title: string
 	id?: string
 	classes?: string
+	headingClasses?: string
 }
-const { title, id, classes } = Astro.props
+const { title, id, classes, headingClasses } = Astro.props
 ---
 
 <Section id && id={id} classes={classes}>
 	<Row>
 		<Col span="2">
-			<h2 class="text-3xl leading-8">{title}</h2>
+			<h2 class={headingClasses}>{title}</h2>
 		</Col>
-		<Col span="5" classes="text-lg leading-8">
+		<Col span="10" classes="text-lg leading-8">
 			<slot name="firstColumn" />
 		</Col>
 		<Col span="5" classes="text-lg leading-8">
