--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,11 +67,11 @@ h6 {
 }
 
 h1 {
-	@apply text-4xl lg:text-6xl;
+	@apply mt-9 text-6xl font-bold leading-none md:text-9xl;
 }
 
 h2 {
-	@apply text-3xl lg:text-5xl;
+	@apply text-3xl leading-8;
 }
 
 h3 {
@@ -90,7 +90,7 @@ h6 {
 	@apply text-base lg:text-lg;
 }
 main a {
-	@apply text-primary-500 hover:text-primary-600 dark:text-secondary-500 dark:hover:text-secondary-600;
+	@apply text-primary-500 transition-colors duration-300 hover:text-primary-600 dark:text-secondary-500 dark:hover:text-secondary-600;
 }
 .highlight {
 	@apply text-primary-500 dark:text-secondary-500;
@@ -108,8 +108,9 @@ main a {
 
 /* Scroll animations */
 /* To disable scroll animations remove the class "scroll-animation" from root html in the layout file */
-.scroll-animation .col {
-	@apply translate-y-4 transform opacity-0 transition-all duration-1000 [&.scroll-animated]:translate-y-0 [&.scroll-animated]:opacity-100 [&:nth-child(1)]:delay-[50ms] [&:nth-child(10)]:delay-[725ms] [&:nth-child(11)]:delay-[800ms] [&:nth-child(12)]:delay-[875ms] [&:nth-child(2)]:delay-[125ms] [&:nth-child(3)]:delay-[200ms] [&:nth-child(4)]:delay-[275ms] [&:nth-child(5)]:delay-[350ms] [&:nth-child(6)]:delay-[425ms] [&:nth-child(7)]:delay-[500ms] [&:nth-child(8)]:delay-[575ms] [&:nth-child(9)]:delay-[650ms];
+.scroll-animation .col:not(.noanimation),
+.scroll-animation .animate {
+	@apply translate-y-2 transform opacity-0 blur-[3px] transition-all duration-1000 [&.scroll-animated]:translate-y-0 [&.scroll-animated]:opacity-100 [&.scroll-animated]:blur-none [&:nth-child(1)]:delay-[50ms] [&:nth-child(10)]:delay-[725ms] [&:nth-child(11)]:delay-[800ms] [&:nth-child(12)]:delay-[875ms] [&:nth-child(2)]:delay-[125ms] [&:nth-child(3)]:delay-[200ms] [&:nth-child(4)]:delay-[275ms] [&:nth-child(5)]:delay-[350ms] [&:nth-child(6)]:delay-[425ms] [&:nth-child(7)]:delay-[500ms] [&:nth-child(8)]:delay-[575ms] [&:nth-child(9)]:delay-[650ms];
 }
 
 /* Fonts */
