--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -110,7 +110,7 @@ main a {
 /* To disable scroll animations remove the class "scroll-animation" from root html in the layout file */
 .scroll-animation .col:not(.noanimation),
 .scroll-animation .animate {
-	@apply translate-y-2 transform opacity-0 blur-[3px] transition-all duration-1000 [&.scroll-animated]:translate-y-0 [&.scroll-animated]:opacity-100 [&.scroll-animated]:blur-none [&:nth-child(1)]:delay-[50ms] [&:nth-child(10)]:delay-[725ms] [&:nth-child(11)]:delay-[800ms] [&:nth-child(12)]:delay-[875ms] [&:nth-child(2)]:delay-[125ms] [&:nth-child(3)]:delay-[200ms] [&:nth-child(4)]:delay-[275ms] [&:nth-child(5)]:delay-[350ms] [&:nth-child(6)]:delay-[425ms] [&:nth-child(7)]:delay-[500ms] [&:nth-child(8)]:delay-[575ms] [&:nth-child(9)]:delay-[650ms];
+	@apply translate-y-2 transform opacity-0 blur-sm transition-all duration-1000 [&.scroll-animated]:translate-y-0 [&.scroll-animated]:opacity-100 [&.scroll-animated]:blur-none [&:nth-child(1)]:delay-[100ms] [&:nth-child(10)]:delay-[1000ms] [&:nth-child(11)]:delay-[1100ms] [&:nth-child(12)]:delay-[1200ms] [&:nth-child(2)]:delay-[200ms] [&:nth-child(3)]:delay-[300ms] [&:nth-child(4)]:delay-[400ms] [&:nth-child(5)]:delay-[500ms] [&:nth-child(6)]:delay-[600ms] [&:nth-child(7)]:delay-[700ms] [&:nth-child(8)]:delay-[800ms] [&:nth-child(9)]:delay-[900ms];
 }
 
 /* Fonts */
