refactor layout  & fonts

--- a/src/components/ui/Feeds/ExperienceFeed.astro
+++ b/src/components/ui/Feeds/ExperienceFeed.astro
@@ -58,7 +58,7 @@ const { data, classes } = Astro.props
 		@apply relative flex flex-1 flex-col pl-6 before:absolute before:-left-2 before:top-2 before:z-10 before:size-4 before:rounded-full before:bg-primary-500 before:ring-2 before:ring-primary-100 after:absolute after:-left-2 after:top-2 after:size-4 after:rounded-full after:bg-primary-400 after:opacity-80 lg:pl-12 dark:before:bg-secondary-500 dark:before:ring-neutral-800 dark:after:bg-secondary-500 [&_p]:m-0 [.feed\_\_item:hover_&:after]:animate-ping;
 	}
 	.feed__item-date_info {
-		@apply hidden font-headingsPrimary text-2xl font-medium leading-8 text-neutral-900 lg:flex lg:w-40 lg:flex-col lg:gap-2 dark:text-white;
+		@apply hidden text-2xl font-medium leading-8 text-neutral-900 lg:flex lg:w-40 lg:flex-col lg:gap-2 dark:text-white;
 	}
 	.feed__item-date_info-company,
 	.feed__item-date_info-location {
