--- a/src/components/ui/Testimonial.astro
+++ b/src/components/ui/Testimonial.astro
@@ -105,7 +105,7 @@ const {
 		@apply relative z-10;
 	}
 	.testimonial__blockquote {
-		@apply pb-6 font-headingsPrimary text-3xl leading-[60px] md:text-3xl md:leading-[3.75rem] [&>p]:text-neutral-600 dark:[&>p]:text-neutral-300;
+		@apply pb-6 text-3xl leading-[60px] md:text-3xl md:leading-[3.75rem] [&>p]:text-neutral-600 dark:[&>p]:text-neutral-300;
 	}
 	.testimonial__figcaption {
 		@apply flex flex-col gap-4 text-sm leading-normal text-neutral-600 dark:text-neutral-300;
