--- a/src/layouts/LayoutCode.astro
+++ b/src/layouts/LayoutCode.astro
@@ -19,6 +19,7 @@ import Scripts from '../components/scripts/ThemeScripts.astro'
 import GoogleTagManager from '../components/scripts/googleTagManagerBody.astro'
 // Styles
 import '../styles/global.css'
+import '../styles/fontsCode.css'
 // Fonts
 
 import '@fontsource-variable/roboto-mono'
