--- a/src/pages/index-new.astro
+++ b/src/pages/index-new.astro
@@ -1,7 +1,7 @@
 ---
 // Components
 // - Layout
-import Layout from '../layouts/LayoutLight.astro'
+import Layout from '../layouts/LayoutDesign.astro'
 import Section from '../components/ui/Section.astro'
 import Row from '../components/ui/Row.astro'
 import Col from '../components/ui/Col.astro'
@@ -47,7 +47,7 @@ const videoSource = '/videos/hero-video-primary.mp4'
 						Hi, <br />I’m Milo <br />& I design.
 					</h1>
 
-					<ul class="flex flex-wrap gap-6 font-headingsPrimary text-lg italic">
+					<ul class="font-headings flex flex-wrap gap-6 text-lg italic">
 						<li class="animate">
 							<a class="text-inherit" href="mailto:milo@studio.com">milo@studio.com</a>
 						</li>
