--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 // Components
 // - Layout
-import Layout from '../layouts/LayoutLight.astro'
+import Layout from '../layouts/LayoutDesign.astro'
 // - Blocks
 import HomeVideoCTA from '../components/blocks/hero/HomeVideoCTA.astro'
 import TitleText from '../components/blocks/titleText/TitleText.astro'
