--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,34 +4,12 @@ html {
 }
 body {
 	--gradient-stop: 15%;
-	@apply font-bodyPrimary text-neutral-500 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto dark:text-neutral-400;
-	background:
-		radial-gradient(
-			circle at 90% 0%,
-			theme('colors.primary.50' / 1) 0%,
-			theme('colors.white' / 0) var(--gradient-stop)
-		),
-		radial-gradient(
-			circle at 50% 100%,
-			theme('colors.primary.50' / 1) 0%,
-			theme('colors.white' / 0) var(--gradient-stop)
-		),
-		theme('colors.white');
+	@apply text-neutral-500 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto dark:text-neutral-400;
+	background: theme('colors.white');
 }
 
 body:where(.dark, .dark *) {
-	background:
-		radial-gradient(
-			circle at 90% 0%,
-			theme('colors.secondary.950' / 1) 0%,
-			theme('colors.neutral.950' / 0) var(--gradient-stop)
-		),
-		radial-gradient(
-			circle at 50% 100%,
-			theme('colors.secondary.950' / 1) 0%,
-			theme('colors.neutral.950' / 0) var(--gradient-stop)
-		),
-		theme('colors.neutral.950');
+	background: theme('colors.neutral.950');
 }
 
 /* Main typography */
@@ -44,7 +22,7 @@ h3,
 h4,
 h5,
 h6 {
-	@apply font-headingsPrimary text-neutral-900 last:mb-0 dark:text-white [&>strong]:text-primary-500;
+	@apply text-neutral-900 last:mb-0 dark:text-white [&>strong]:text-primary-500;
 }
 h1 strong,
 h2 strong,
@@ -111,17 +89,4 @@ main a {
 .scroll-animation .col:not(.noanimation),
 .scroll-animation .animate {
 	@apply translate-y-2 transform opacity-0 blur-sm transition-all duration-1000 [&.scroll-animated]:translate-y-0 [&.scroll-animated]:opacity-100 [&.scroll-animated]:blur-none [&:nth-child(1)]:delay-[100ms] [&:nth-child(10)]:delay-[1000ms] [&:nth-child(11)]:delay-[1100ms] [&:nth-child(12)]:delay-[1200ms] [&:nth-child(2)]:delay-[200ms] [&:nth-child(3)]:delay-[300ms] [&:nth-child(4)]:delay-[400ms] [&:nth-child(5)]:delay-[500ms] [&:nth-child(6)]:delay-[600ms] [&:nth-child(7)]:delay-[700ms] [&:nth-child(8)]:delay-[800ms] [&:nth-child(9)]:delay-[900ms];
-}
-
-/* Fonts */
-.secondary-page body * {
-	@apply !font-bodySecondary;
-}
-.secondary-page h1,
-.secondary-page h2,
-.secondary-page h3,
-.secondary-page h4,
-.secondary-page h5,
-.secondary-page h6 {
-	@apply !font-headingsSecondary;
 }
