--- a/src/layouts/LayoutDesign.astro
+++ b/src/layouts/LayoutDesign.astro
@@ -19,6 +19,7 @@ import Scripts from '../components/scripts/ThemeScripts.astro'
 import GoogleTagManager from '../components/scripts/googleTagManagerBody.astro'
 // Styles
 import '../styles/global.css'
+import '../styles/fontsDesign.css'
 // Fonts
 import '@fontsource-variable/nunito-sans'
 import '@fontsource-variable/playfair-display'
