adjusted design fonts

--- a/src/pages/index-new.astro
+++ b/src/pages/index-new.astro
@@ -66,7 +66,7 @@ const videoSource = '/videos/hero-video-primary.mp4'
 	<Section id="about">
 		<Row>
 			<Col span="2">
-				<h2 class="italic lg:text-right">About me</h2>
+				<h2 class="lg:text-right">About me</h2>
 			</Col>
 			<Col span="10" classes="lg:columns-2 gap-8">
 				<p>
