--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -2,75 +2,56 @@
 // Contact Me
 // ------------
 // Description: A component that displays a contact me section with a title, first column, and second column.
-// Properties:
-// - title: The title of the section (required, string)
-// - id: The ID of the section (optional, string)
-// - firstColumn: The first column of the section (optional, string)
-// - secondColumn: The second column of the section (optional, string)
 
 // Components
-// - Blocks
-import TitleText from '../titleText/TitleText.astro'
 // - UI
 import { Icon } from 'astro-icon/components'
-
-const contactData = {
-	title: 'Contact me',
-	id: 'contact',
-	firstColumn: [
-		{
-			text: 'Got a project in mind, a question, or just want to say hello? I’m always open to new collaborations and interesting ideas. Feel free to reach out — I’d love to hear from you.'
-		}
-	],
-	secondColumn: [
-		{
-			type: 'link',
-			href: 'mailto:milo@studio.com',
-			icon: 'at-sign',
-			text: 'milo@studio.com'
-		},
-		{
-			type: 'link',
-			href: 'tel:+13235550198',
-			icon: 'phone',
-			text: '+1 (323) 555-0198'
-		},
-		{
-			type: 'text',
-			icon: 'check-circle',
-			text: 'Remote Friendly'
-		},
-		{
-			type: 'link',
-			href: '#',
-			icon: 'dribbble',
-			text: '@milo.design'
-		}
-	]
-}
 ---
 
-<TitleText title={contactData.title} id={contactData.id}>
-	<p slot="firstColumn">
-		{contactData.firstColumn[0].text}
-	</p>
-	<div slot="secondColumn">
-		<div
-			class="flex flex-col gap-1 font-headingsPrimary text-lg leading-8 text-neutral-600 dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300"
-		>
-			{
-				contactData.secondColumn.map((item) =>
-					item.type === 'link' ? (
-						<a href={item.href} class="flex items-center gap-2">
-							<Icon name={item.icon} /> {item.text}
-						</a>
-					) : (
-						<span class="flex items-center gap-2">
-							<Icon name={item.icon} /> {item.text}
-						</span>
-					)
-				)
-			}
+<footer class="footer">
+	<div class="footer__container">
+		<div class="footer__row">
+			<div class="footer__col col-span-2">
+				<h2 class="lg:text-right">Contact me</h2>
+			</div>
+			<div class="footer__col col-span-10 gap-8 lg:columns-2">
+				<p>
+					Got a project in mind, a question, or just want to say hello? I’m always open to new
+					collaborations and interesting ideas. Feel free to reach out — I’d love to hear from you.
+				</p>
+				<div class="footer__links font-headings">
+					<a href="mailto:milo@studio.com" class="footer__link">
+						<Icon name="at-sign" /> milo@studio.com
+					</a>
+					<a href="tel:+13235550198" class="footer__link">
+						<Icon name="phone" /> +1 (323) 555-0198
+					</a>
+					<span class="footer__link">
+						<Icon name="check-circle" /> Remote Friendly
+					</span>
+					<a href="#" class="footer__link">
+						<Icon name="dribbble" /> @milo.design
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
-</TitleText>
+</footer>
+
+<style>
+	.footer {
+		@apply relative py-12 text-neutral-600 lg:py-20 dark:text-neutral-400;
+	}
+	.footer__container {
+		@apply container relative z-[1] mx-auto px-6;
+	}
+	.footer__row {
+		@apply grid grid-cols-4 gap-9 md:grid-cols-8 lg:grid-cols-12;
+	}
+	.footer__links {
+		@apply flex flex-col gap-1 text-lg leading-8 text-neutral-600 dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300;
+	}
+	.footer__link {
+		@apply flex items-center gap-2;
+	}
+</style>
