Added Feedback section

--- a/src/components/ui/Testimonial.astro
+++ b/src/components/ui/Testimonial.astro
@@ -104,8 +104,8 @@ const {
 	.testimonial__figure {
 		@apply relative z-10;
 	}
-	.testimonial__blockquote {
-		@apply pb-6 text-3xl leading-[60px] md:text-3xl md:leading-[3.75rem] [&>p]:text-neutral-600 dark:[&>p]:text-neutral-300;
+	.testimonial__blockquote p {
+		@apply pb-6 text-3xl leading-[60px] text-neutral-600 md:text-3xl md:leading-[3.75rem] dark:text-neutral-300;
 	}
 	.testimonial__figcaption {
 		@apply flex flex-col gap-4 text-sm leading-normal text-neutral-600 dark:text-neutral-300;
