Added case studies

--- a/src/components/ui/cards/CaseStudyCard.astro
+++ b/src/components/ui/cards/CaseStudyCard.astro
@@ -72,7 +72,7 @@ const formatRoleName = (role: string): string => {
 			<div class="caseStudy-roles">
 				Role:
 				{roles.map((role: string) => (
-					<p>{formatRoleName(role)}</p>
+					<span class="caseStudy-role">{formatRoleName(role)}</span>
 				))}
 			</div>
 		)
