--- a/src/components/blocks/feed/Experience.astro
+++ b/src/components/blocks/feed/Experience.astro
@@ -33,10 +33,10 @@ const { data, classes, headingClasses } = Astro.props
 
 <Section id="experience">
 	<Row>
-		<Col span="2">
+		<Col span="2" spanMobile="4">
 			<h2 classes={headingClasses}>Experience</h2>
 		</Col>
-		<Col span="10">
+		<Col span="10" spanMobile="4">
 			<Feed data={data} classes={classes} />
 		</Col>
 	</Row>
