--- a/src/components/blocks/hero/HomeVideoCTA.astro
+++ b/src/components/blocks/hero/HomeVideoCTA.astro
@@ -26,7 +26,7 @@ const { videoSource, headingClasses, linksClasses } = Astro.props
 <Section id="intro" classes="!overflow-visible !pt-[240px]">
 	<Row>
 		<Col span="2" />
-		<Col span="10">
+		<Col span="10" spanMobile="4">
 			<video
 				autoplay
 				muted
