--- a/src/components/blocks/titleText/TitleText.astro
+++ b/src/components/blocks/titleText/TitleText.astro
@@ -26,7 +26,7 @@ const { title, id, classes, headingClasses } = Astro.props
 
 <Section id && id={id} classes={classes}>
 	<Row>
-		<Col span="2">
+		<Col span="2" spanMobile="4">
 			<h2 class={headingClasses}>{title}</h2>
 		</Col>
 		<Col span="5" classes="text-lg leading-8">
