--- a/src/layouts/CaseStudyLayout.astro
+++ b/src/layouts/CaseStudyLayout.astro
@@ -4,7 +4,7 @@ const { frontmatter } = Astro.props
 
 // Components
 // - Layout
-import Layout from './LayoutLight.astro'
+import Layout from './LayoutDesign.astro'
 import Col from '../components/ui/Col.astro'
 import Row from '../components/ui/Row.astro'
 import Section from '../components/ui/Section.astro'
