--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -11,10 +11,10 @@ import { Icon } from 'astro-icon/components'
 <footer class="footer">
 	<div class="footer__container">
 		<div class="footer__row">
-			<div class="footer__col col-span-2">
+			<div class="footer__col col-span-4 lg:col-span-2">
 				<h2 class="lg:text-right">Contact me</h2>
 			</div>
-			<div class="footer__col col-span-10 gap-8 lg:columns-2">
+			<div class="footer__col col-span-4 gap-8 lg:col-span-10 lg:columns-2">
 				<p>
 					Got a project in mind, a question, or just want to say hello? I’m always open to new
 					collaborations and interesting ideas. Feel free to reach out — I’d love to hear from you.
@@ -46,7 +46,7 @@ import { Icon } from 'astro-icon/components'
 		@apply container relative z-[1] mx-auto px-6;
 	}
 	.footer__row {
-		@apply grid grid-cols-4 gap-9 md:grid-cols-8 lg:grid-cols-12;
+		@apply grid grid-cols-4 gap-6 lg:grid-cols-12 lg:gap-8;
 	}
 	.footer__links {
 		@apply flex flex-col gap-1 text-lg leading-8 text-neutral-600 dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300;
