--- a/src/pages/index-new.astro
+++ b/src/pages/index-new.astro
@@ -46,7 +46,7 @@ const videoSource = '/videos/hero-video-primary.mp4'
 	<Section id="intro" classes="!overflow-visible !pt-40 lg:!pt-28">
 		<Row>
 			<Col span="2" />
-			<Col span="10">
+			<Col span="10" spanMobile="4">
 				<video
 					autoplay
 					muted
@@ -78,10 +78,10 @@ const videoSource = '/videos/hero-video-primary.mp4'
 	<!-- About -->
 	<Section id="about">
 		<Row>
-			<Col span="2">
+			<Col span="2" spanMobile="4">
 				<h2 class="lg:text-right">About me</h2>
 			</Col>
-			<Col span="10" classes="lg:columns-2 gap-8">
+			<Col span="10" spanMobile="4" classes="lg:columns-2 gap-8">
 				<p>
 					I'm a designer who loves crafting clean, modern, and user-friendly digital experiences. I
 					care deeply about layout, typography, and interaction — and I always aim for that sweet
@@ -100,10 +100,10 @@ const videoSource = '/videos/hero-video-primary.mp4'
 	<!-- Experience -->
 	<Section id="experience">
 		<Row>
-			<Col span="2">
+			<Col span="2" spanMobile="4">
 				<h2 class="lg:text-right">Experience</h2>
 			</Col>
-			<Col span="10">
+			<Col span="10" spanMobile="4">
 				<Feed data={experienceData} />
 			</Col>
 		</Row>
@@ -112,10 +112,10 @@ const videoSource = '/videos/hero-video-primary.mp4'
 	<!-- Skills & Tools -->
 	<Section id="skills">
 		<Row>
-			<Col span="2">
+			<Col span="2" spanMobile="4">
 				<h2 class="lg:text-right">Skills & Tools</h2>
 			</Col>
-			<Col span="5">
+			<Col span="5" spanMobile="4">
 				<p>
 					I'm a designer who loves crafting clean, modern, and user-friendly digital experiences. I
 					care deeply about layout, typography, and interaction — and I always aim for that sweet
@@ -134,7 +134,7 @@ const videoSource = '/videos/hero-video-primary.mp4'
 					classes="ml-4"
 				/>
 			</Col>
-			<Col span="5">
+			<Col span="5" spanMobile="4">
 				<p>
 					When I’m not designing, I’m usually sketching new ideas, testing fresh design tools, or
 					browsing Dribbble and Behance for inspiration. I believe in thoughtful design, continuous
@@ -157,10 +157,10 @@ const videoSource = '/videos/hero-video-primary.mp4'
 	<!-- Feedback -->
 	<Section id="feedback">
 		<Row>
-			<Col span="2">
+			<Col span="2" spanMobile="4">
 				<h2 class="lg:text-right">Feedback</h2>
 			</Col>
-			<Col span="10">
+			<Col span="10" spanMobile="4">
 				<Slider
 					slidesPerView={1}
 					id="feedbackSlider"
@@ -189,16 +189,16 @@ const videoSource = '/videos/hero-video-primary.mp4'
 	<!-- Case Studies -->
 	<Section id="case-studies">
 		<Row classes="pb-6">
-			<Col span="2">
+			<Col span="2" spanMobile="4">
 				<h2 class="lg:text-right">Case Studies</h2>
 			</Col>
-			<Col span="5">
+			<Col span="5" spanMobile="4">
 				<p class="m-0 w-full">
 					From SaaS landing pages to eCommerce stores and interactive web apps. Each one reflects my
 					focus on clean design, thoughtful UX, and modern front-end development.
 				</p>
 			</Col>
-			<Col span="5" classes="lg:self-end lg:justify-self-end">
+			<Col span="5" spanMobile="4" classes="lg:self-end lg:justify-self-end">
 				<Button
 					link="/case-studies"
 					type="link"
@@ -212,7 +212,7 @@ const videoSource = '/videos/hero-video-primary.mp4'
 		</Row>
 		<Row>
 			<Col span="2" />
-			<Col span="10">
+			<Col span="10" spanMobile="4">
 				<div class="grid grid-cols-1 gap-4 lg:grid-cols-3">
 					{
 						sortedCaseStudies.slice(0, 3).map((caseStudy: any) => (
