--- a/src/pages/case-studies/[...page].astro
+++ b/src/pages/case-studies/[...page].astro
@@ -5,12 +5,14 @@
 
 // Components
 // - Layout
-import Layout from '../../layouts/LayoutLight.astro'
+import Layout from '../../layouts/LayoutDesign.astro'
 import Section from '../../components/ui/Section.astro'
 import Row from '../../components/ui/Row.astro'
 import Col from '../../components/ui/Col.astro'
 // - UI
 import CaseStudies from '../../components/blocks/caseStudies/CaseStudies.astro'
+import CaseStudyCard from '../../components/ui/cards/CaseStudyCard.astro'
+import Pagination from '../../components/ui/Pagination.astro'
 
 import { getCollection } from 'astro:content'
 
@@ -31,43 +33,70 @@ const SEO = {
 	description:
 		'Explore detailed case studies and projects built using the Milo Astro theme. Discover how you can present your work, achievements, and process in a modern, fast, and accessible format.'
 }
-// - Page Header
-const header = {
-	title: 'The <strong>Milo</strong> Case Studies',
-	text: "Explore Milo's latest case studies."
-}
+
+// Function to sort case studies by date
+const sortedCaseStudies = page.data.sort((a: any, b: any) => {
+	return new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()
+})
 ---
 
 <Layout title={SEO.title} description={SEO.description}>
-	<Section id="intro" padding="top" classes="!overflow-visible">
+	<Section id="intro">
 		<Row>
-			<Col span="12" classes="max-w-3xl self-center justify-self-center ">
-				<div class="relative text-left">
-					<h1 class="text-center text-5xl opacity-80">Case Studies</h1>
-					<p class="text-center text-lg leading-8 opacity-80">
-						Over the years, I have had the privilege of working on a wide range of projects, from
-						designing and developing websites for small businesses to creating complex web
-						applications for large enterprises.
+			<Col span="2" />
+			<Col span="10" spanMobile="4">
+				<div class="animate">
+					<h1 class="mt-0">Featured Work</h1>
+					<p>
+						Throughout my career, I have had the privilege of working on a wide range of projects,
+						from designing and developing websites for small businesses and startups, to creating
+						complex web applications for large enterprises and non-profit organizations.
 					</p>
 				</div>
 			</Col>
 		</Row>
 	</Section>
-	<CaseStudies
-		data={page.data}
-		{...page.lastPage === 1
-			? {}
-			: {
-					pagination: {
-						first: page.url.first,
-						current: page.url.current,
-						length: page.lastPage,
-						prev: page.url.prev,
-						next: page.url.next,
-						last: page.url.last,
-						size: page.size,
-						total: page.total
+	<Section id="case-studies">
+		<Row>
+			<Col span="2" spanMobile="4">
+				<h2 class="lg:text-right">Case Studies</h2>
+			</Col>
+			<Col span="10" spanMobile="4">
+				<div class="grid grid-cols-1 gap-x-6 gap-y-12 lg:grid-cols-3">
+					{
+						sortedCaseStudies.map((caseStudy: any) => (
+							<CaseStudyCard
+								link={`/case-studies/${caseStudy.id}`}
+								title={caseStudy.data.title}
+								image={caseStudy.data.cardImage}
+								greyImage={caseStudy.data.greyImage}
+								roles={caseStudy.data.roles}
+							>
+								{caseStudy.data.description}
+							</CaseStudyCard>
+						))
 					}
-				}}
-	/>
+				</div>
+			</Col>
+		</Row>
+		{
+			page.lastPage === 1 ? null : (
+				<Row classes="pt-16">
+					<Col span="2" />
+					<Col span="10" spanMobile="4">
+						<Pagination
+							first={page.url.first}
+							prev={page.url.prev}
+							next={page.url.next}
+							last={page.url.last}
+							current={page.url.current}
+							length={page.lastPage}
+							size={page.size}
+							total={page.total}
+						/>
+					</Col>
+				</Row>
+			)
+		}
+	</Section>
 </Layout>
